# VTK

./: CMakeLists.txt
.gitlab/: artifacts.yml
.gitlab/ci/: configure_fedora42.cmake  configure_wasm_common.cmake  download_dawn.cmake
CMake/: vtkInstallCMakePackage.cmake  vtkSerializationWebAssemblyBindings.cxx.in  vtkTestingDriver.cmake  vtkVersion.cmake
CMake/wasm/: vtkWasmTest.html.in  vtkWasmTestRunner.cmake
Common/Core/: CMakeLists.txt  vtkAOSDataArrayTemplate.h  vtkAffineTypedArray.h.in  vtkBitArray.h  vtkCharArray.h  vtkCollection.cxx  vtkCollection.h  vtkCompositeTypedArray.h.in  vtkConstantTypedArray.h.in  vtkDataArray.h  vtkDataArrayMeta.h  vtkDataArrayTupleRange_Generic.h  vtkDataArrayValueRange_Generic.h  vtkDoubleArray.h  vtkFloatArray.h  vtkGarbageCollector.cxx  vtkGenericDataArray.h  vtkGenericDataArray.txx  vtkIdTypeArray.h  vtkIndexedTypedArray.h.in  vtkIntArray.h  vtkLongArray.h  vtkLongLongArray.h  vtkNew.h  vtkSOADataArrayTemplate.h  vtkSOATypedArray.h.in  vtkScaledSOADataArrayTemplate.h  vtkScaledSOATypedArray.h.in  vtkShortArray.h  vtkSignedCharArray.h  vtkStdFunctionTypedArray.h.in  vtkStridedTypedArray.h.in  vtkStructuredPointTypedArray.h.in  vtkUnsignedCharArray.h  vtkUnsignedIntArray.h  vtkUnsignedLongArray.h  vtkUnsignedLongLongArray.h  vtkUnsignedShortArray.h
Common/DataModel/: .gitattributes  CMakeLists.txt  vtkBoundingBox.cxx  vtkCell.cxx  vtkCell.h  vtkCell3D.cxx  vtkCell3D.h  vtkConvexPointSet.cxx  vtkConvexPointSet.h  vtkDataObject.h  vtkDataSetAttributesFieldList.cxx  vtkDataSetAttributesFieldList.h  vtkExplicitStructuredGrid.cxx  vtkGenericCell.cxx  vtkHexagonalPrism.cxx  vtkHexagonalPrism.h  vtkHexahedron.cxx  vtkHexahedron.h  vtkHyperTreeGridGeometryUnlimitedLevelEntry.cxx  vtkLine.cxx  vtkMarchingCellsClipCases.h  vtkMarchingCellsContourCases.cxx  vtkMarchingCellsContourCases.h  vtkMarchingCubesPolygonCases.cxx  vtkMarchingCubesPolygonCases.h  vtkMarchingCubesTriangleCases.cxx  vtkMarchingCubesTriangleCases.h  vtkMarchingSquaresLineCases.cxx  vtkMarchingSquaresLineCases.h  vtkPentagonalPrism.cxx  vtkPentagonalPrism.h  vtkPixel.cxx  vtkPixel.h  vtkPolyLine.cxx  vtkPolyLine.h  vtkPolyVertex.cxx  vtkPolyVertex.h  vtkPolygon.cxx  vtkPolygon.h  vtkPolyhedron.cxx  (+15 more)
Common/ExecutionModel/: vtkDemandDrivenPipeline.h
Common/Misc/: vtkExprTkFunctionParser.cxx
Common/Transforms/: vtkLinearTransform.cxx
Documentation/release/: 9.6.md
Examples/Emscripten/Cxx/ConeWebXR/: CMakeLists.txt  ConeWebXR.cxx  README.md  index.html
Filters/Core/: CMakeLists.txt  vtk3DLinearGridCrinkleExtractor.cxx  vtk3DLinearGridPlaneCutter.cxx  vtkAppendCompositeDataLeaves.cxx  vtkAppendCompositeDataLeaves.h  vtkAppendDataSets.cxx  vtkAppendDataSets.h  vtkAppendFilter.cxx  vtkAppendFilter.h  vtkAppendPolyData.cxx  vtkAppendPolyData.h  vtkContour3DLinearGrid.cxx  vtkFlyingEdges2D.cxx  vtkFlyingEdges3D.cxx  vtkFlyingEdgesPlaneCutter.cxx  vtkMarchingCubes.cxx  vtkMarchingSquares.cxx  vtkStructuredDataPlaneCutter.cxx
Filters/General/: vtkClipDataSet.cxx  vtkDiscreteFlyingEdges2D.cxx  vtkDiscreteFlyingEdges3D.cxx  vtkDiscreteFlyingEdgesClipper2D.cxx  vtkDiscreteMarchingCubes.cxx  vtkImageMarchingCubes.cxx  vtkTableBasedClipDataSet.cxx  vtkWarpScalar.cxx
Filters/GeometryPreview/: vtkPointSetToOctreeImageFilter.cxx
Filters/HyperTree/: vtkHyperTreeGridGradient.cxx  vtkHyperTreeGridGradient.h
Filters/Points/: vtkExtractSurface.cxx
IO/Export/: vtkJSONDataSetWriter.cxx  vtkJSONSceneExporter.cxx
IO/Geometry/: vtkGLTFDocumentLoader.cxx
IO/HDF/: vtkHDFUtilities.cxx
IO/IOSS/: vtkIOSSReaderInternal.cxx
IO/Import/: vtkGLTFImporter.cxx
IO/XML/: vtkXMLHyperTreeGridReader.cxx
Imaging/Hybrid/: vtkSliceCubes.cxx
Interaction/Style/: CMakeLists.txt  vtk.module  vtkCameraManipulator.cxx  vtkCameraManipulator.h  vtkInteractorStyleManipulator.cxx  vtkInteractorStyleManipulator.h  vtkJoystickFly.cxx  vtkJoystickFly.h  vtkJoystickFlyIn.cxx  vtkJoystickFlyIn.h  vtkJoystickFlyOut.cxx  vtkJoystickFlyOut.h  vtkTableTopRotate.cxx  vtkTableTopRotate.h  vtkTrackballEnvironmentRotate.cxx  vtkTrackballEnvironmentRotate.h  vtkTrackballMoveActor.cxx  vtkTrackballMoveActor.h  vtkTrackballMultiRotate.cxx  vtkTrackballMultiRotate.h  vtkTrackballPan.cxx  vtkTrackballPan.h  vtkTrackballRoll.cxx  vtkTrackballRoll.h  vtkTrackballRotate.cxx  vtkTrackballRotate.h  vtkTrackballZoom.cxx  vtkTrackballZoom.h  vtkTrackballZoomToMouse.cxx  vtkTrackballZoomToMouse.h
Remote/: RenderingLookingGlass.remote.cmake
Rendering/ANARI/: vtkAnariPolyDataMapperNode.cxx
Rendering/Core/: vtkInteractorStyle.cxx  vtkInteractorStyle.h  vtkInteractorStyle3D.h  vtkRenderWindowInteractor3D.h
Rendering/GridAxes/: vtkGridAxesPlaneActor2D.cxx
Rendering/UI/: vtkWebAssemblyRenderWindowInteractor.cxx  vtkWebAssemblyRenderWindowInteractor.h  vtkWebAssemblyRenderWindowInteractor.js
Rendering/VR/: vtk.module  vtkVRCamera.h  vtkVRHMDCamera.cxx  vtkVRHMDCamera.h  vtkVRInteractorStyle.h  vtkVRMenuRepresentation.h  vtkVRMenuWidget.h  vtkVRModel.cxx  vtkVRModel.h  vtkVRRenderWindow.h  vtkVRRenderWindowInteractor.h  vtkVRRenderer.h
Rendering/VolumeOpenGL2/: vtkVolumeTexture.cxx
Rendering/WebXR/: CMakeLists.txt  vtk.module  vtkWebXR.h  vtkWebXR.js  vtkWebXRCamera.cxx  vtkWebXRCamera.h  vtkWebXRInteractorStyle.cxx  vtkWebXRInteractorStyle.h  vtkWebXRModel.cxx  vtkWebXRModel.h  vtkWebXRRenderWindow.cxx  vtkWebXRRenderWindow.h  vtkWebXRRenderWindowInteractor.cxx  vtkWebXRRenderWindowInteractor.h  vtkWebXRRenderer.cxx  vtkWebXRRenderer.h  vtkWebXRUtilities.h  vtk_webxr_actions.json
Rendering/WebXR/Testing/: CMakeLists.txt
Rendering/WebXR/Testing/Cxx/: CMakeLists.txt  TestWebXRInteraction.cxx  TestWebXRRendering.cxx
Rendering/WebXR/Testing/Data/Baseline/: TestWebXRInteraction.png.sha512  TestWebXRRendering.png.sha512
Serialization/Manager/: vtk.module  vtkSession.cxx  vtkSession.h
Testing/Core/: vtkEmscriptenTestUtilities.cxx  vtkEmscriptenTestUtilities.h  vtkEmscriptenTestUtilities.js
Utilities/Marshalling/: VTK_MARSHALAUTO.txt  ignore.txt
Web/WebAssembly/: vtk.module
Web/WebAssemblyAsync/: vtk.module
(+63 files in other folders)
